<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a46146.musicalstrueture.MainActivity">

    <TextView
        style="@style/Title_style"
        android:text="@string/list_name" />

    <LinearLayout style="@style/Linear_style">

        <TextView
            style="@style/tv_style"
            android:text="@string/music_one" />

        <ImageView
            android:id="@+id/iv_music_1"
            style="@style/iv_music_style"
            android:src="@drawable/play" />

        <Button
            android:id="@+id/btn_music_1"
            style="@style/btn_introduction_style"
            android:text="@string/button_introduction_name" />
    </LinearLayout>


    <LinearLayout style="@style/Linear_style">

        <TextView
            style="@style/tv_style"
            android:text="@string/music_two" />

        <ImageView
            android:id="@+id/iv_music_2"
            style="@style/iv_music_style"
            android:src="@drawable/play" />

        <Button
            android:id="@+id/btn_music_2"
            style="@style/btn_introduction_style"
            android:text="@string/button_introduction_name" />
    </LinearLayout>

    <LinearLayout style="@style/Linear_style">

        <TextView
            style="@style/tv_style"
            android:text="@string/music_three" />

        <ImageView
            android:id="@+id/iv_music_3"
            style="@style/iv_music_style"
            android:src="@drawable/play" />

        <Button
            android:id="@+id/btn_music_3"
            style="@style/btn_introduction_style"
            android:text="@string/button_introduction_name" />
    </LinearLayout>
</LinearLayout>
